      with years-old versions of \R, but better compression is given by
      \option{--resave-data=best}, requiring \R >= 2.10.0.

      It now adds a \file{datalist} file for \file{data} directories of
      more than 1Mb.

      Patterns in \file{.Rbuildignore} are now also matched against all
      directory names (including those of empty directories).

      \item \command{R CMD check} now also checks for filenames that are
      case-insensitive matches to Windows' reserved file names with
      extensions, such as \file{nul.Rd}, as these have caused problems
      on some Windows systems.

      It checks for inefficiently saved \file{data/*.rda} and
      \file{data/*.RData} files, and reports on those large than 100Kb.
      A more complete check (including of the type of compression, but
      potentially much slower) can be switched on by setting environment
      variable \env{_R_CHECK_COMPACT_DATA2_} to \samp{TRUE}.

      The types of files in the \code{data} directory are now checked,
      as packages as \emph{still} misusing it for non-\R data files.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item Installing \R no longer tries to find \command{perl}, and
      \command{R CMD} no longer tries to substitute a full path for
      \command{awk} nor \command{perl} -- this was a legacy from the
      days when they were used by \R itself.  Because a couple of
      packages do use \command{awk}, it is set as the \command{make}
      (rather than environment) variable \env{AWK}.

      \item \command{make check} will now fail if there are differences
      from the reference output when testing package examples and if
      environment variable \env{R_STRICT_PACKAGE_CHECK} is set to a true
      value.

      \item The C99 double complex type is now required.

      The C99 complex trigonometric functions (such as \code{csin}) are
      not required (FreeBSD lacks most of them): substitutes are used if
      they are missing.
    }
  }
